[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/ui/buttons/quitbutton_hover.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/buttons/button01.png" type="Texture" id=2]
[ext_resource path="res://scripts/ui/death_screen.gd" type="Script" id=3]
[ext_resource path="res://assets/ui/buttons/button02.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/buttons/quitbutton.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/fonts/Wildy Sans.otf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/ui/buttons/button03.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/buttons/button03_hover.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/menu_bgs/menu_gameover_background.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/buttons/buttontheme.tres" type="Theme" id=10]
[ext_resource path="res://assets/ui/buttons/button02_hover.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/buttons/button01_hover.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=4]
size = 150
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 60
font_data = ExtResource( 6 )

[node name="DeathScreen" type="Control"]
script = ExtResource( 3 )

[node name="DeathBackground" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 9 )

[node name="Label" type="Label" parent="."]
margin_left = 750.0
margin_top = 150.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 4 )
text = "You Died"

[node name="Menu" type="VBoxContainer" parent="."]
modulate = Color( 0.792157, 0.878431, 1, 1 )
margin_left = 800.0
margin_top = 400.0

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 330.0
margin_bottom = 532.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 330.0
margin_bottom = 532.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Retry" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_right = 330.0
margin_bottom = 130.0
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 12 )

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Retry"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -93.0
margin_top = -37.0
margin_right = 84.0
margin_bottom = 39.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "Retry"
align = 1

[node name="Options" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 134.0
margin_right = 330.0
margin_bottom = 264.0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 11 )

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -89.0
margin_top = -46.0
margin_right = 88.0
margin_bottom = 30.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "options"
align = 1

[node name="Menu" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 268.0
margin_right = 330.0
margin_bottom = 398.0
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )

[node name="Label" type="Label" parent="Menu/CenterRow/Buttons/Menu"]
margin_left = 100.0
margin_top = 26.0
margin_right = 227.0
margin_bottom = 102.0
theme = ExtResource( 10 )
custom_fonts/font = SubResource( 3 )
text = "Menu"
align = 1

[node name="Quit" type="TextureButton" parent="Menu/CenterRow/Buttons"]
margin_top = 402.0
margin_right = 330.0
margin_bottom = 532.0
theme = ExtResource( 10 )
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 1 )

[connection signal="pressed" from="Menu/CenterRow/Buttons/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Menu" to="." method="_on_Menu_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Quit" to="." method="_on_Quit_pressed"]
